# programmiersprachen-aufgabe-1

source/: CMakeLists.txt  Quersumme.cpp  Volumen.cpp  aufgabe1_3.cpp  factorial.cpp  fract.cpp  is_prim.cpp  mile_to_kilometer.cpp  sum-multiples.cpp  tests.cpp
