add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)
add_executable(aufgabe1_3 aufgabe1_3.cpp)
add_executable(Quersumme Quersumme.cpp)
add_executable(sum-multiples sum-multiples.cpp)
add_executable(Volumen Volumen.cpp)
add_executable(factorial factorial.cpp)
add_executable(is_prim is_prim.cpp)
add_executable(mile_to_kilometer mile_to_kilometer.cpp)

